Update to JBoss EAP 7, Java EE 7, Hibernate 5 etc
- Update to Hibernate/Search/Validator 5.x
- Stop wrapping JDBC classes for functional tests
- Use WrappedDatasourceConnectionProvider only in Arquillian tests
- Modify WrappedDatasourceConnectionProvider to resolve
  DatasourceConnectionProviderImpl class dynamically (from Hibernate
  4.2 or 5) for use in Arquillian tests
- Update web(-fragment).xml to v3.1
- Refer to EAP 7 instead of EAP 6
- Update overlay config for EAP 7
- Update Arquillian/functional test config for EAP 7