@@ -160,8 +160,6 @@
             <!-- Used for different content analyzers based on langugage for search. -->
             <usedDependency>org.apache.solr:solr-core</usedDependency>
             <usedDependency>org.apache.solr:solr-solrj</usedDependency>
-            <!-- Used by hibernate -->
-            <usedDependency>org.hibernate:hibernate-search-analyzers</usedDependency>
             <!-- used for arquillian deployment (org.zanata.Deployments) -->
             <usedDependency>org.hibernate:hibernate-testing</usedDependency>
             <usedDependency>org.jboss.arquillian.junit:arquillian-junit-container</usedDependency>
@@ -171,6 +169,8 @@
             <usedDependency>org.jvnet.mock-javamail:mock-javamail</usedDependency>
             <!-- Need for test scope -->
             <usedDependency>${jdbc.groupId}:${jdbc.artifactId}</usedDependency>
+            <!-- used for arquillian tests -->
+            <usedDependency>org.wildfly.arquillian:wildfly-arquillian-container-managed</usedDependency>
             <!-- NB: Don't add anything without a comment explaining how the
                  dependency is used -->
           </usedDependencies>
@@ -194,14 +194,15 @@
           <ignoredResourcePatterns>
             <!-- many, many jars -->
             <ignoredResourcePattern>META-INF/.*</ignoredResourcePattern>
+            <ignoredResourcePattern>VERSION\.properties</ignoredResourcePattern>
             <!-- iText and JavaMelody -->
-            <ignoredResourcePattern>com/lowagie/text/pdf/fonts/cmap_info.txt</ignoredResourcePattern>
+            <ignoredResourcePattern>com/lowagie/text/pdf/fonts/cmap_info\.txt</ignoredResourcePattern>
             <!-- drools and quartz -->
-            <ignoredResourcePattern>build.properties</ignoredResourcePattern>
+            <ignoredResourcePattern>build\.properties</ignoredResourcePattern>
             <!-- jboss-metadata-common and zanata-adapter-xliff -->
-            <ignoredResourcePattern>schema/xml.xsd</ignoredResourcePattern>
+            <ignoredResourcePattern>schema/xml\.xsd</ignoredResourcePattern>
             <!-- infinispan-core/common -->
-            <ignoredResourcePattern>features.xml</ignoredResourcePattern>
+            <ignoredResourcePattern>features\.xml</ignoredResourcePattern>
           </ignoredResourcePatterns>
         </configuration>
       </plugin>
@@ -387,7 +388,7 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>-Dconcordion.output.dir=${concordion.output.dir} -XX:MaxPermSize=256m</argLine>
+          <argLine>-Dconcordion.output.dir=${concordion.output.dir}</argLine>
           <testNGArtifactName>none:none</testNGArtifactName>
           <!-- TODO ensure that stateful tests (eg using Hibernate Search)
                are isolated, or rename them to ITCase (Arquillian), and
@@ -1020,7 +1021,7 @@
                 <configuration>
                   <target unless="skipArqTests">
                     <fail message="'appserver' property must be set to run integration tests (or else use -DskipArqTests)" unless="appserver" />
-                    <fail message="'cargo.installation' property is null (set env var EAP6_URL or else use -DskipArqTests)" unless="cargo.installation" />
+                    <fail message="'cargo.installation' property is null (set env var EAP7_URL or else use -DskipArqTests)" unless="cargo.installation" />
                   </target>
                 </configuration>
               </execution>
@@ -1088,18 +1089,18 @@
             </executions>
           </plugin>
 
-          <plugin>
-            <artifactId>maven-dependency-plugin</artifactId>
-            <configuration>
-              <usedDependencies combine.children="append">
-                <!-- used for arquillian tests -->
-                <usedDependency>org.jboss.as:jboss-as-controller</usedDependency>
-                <usedDependency>org.jboss.as:jboss-as-arquillian-container-managed</usedDependency>
-                <!-- NB: Don't add anything without a comment explaining how the
-                     dependency is used -->
-              </usedDependencies>
-            </configuration>
-          </plugin>
+          <!--<plugin>-->
+            <!--<artifactId>maven-dependency-plugin</artifactId>-->
+            <!--<configuration>-->
+              <!--<usedDependencies combine.children="append">-->
+                <!--&lt;!&ndash; used for arquillian tests &ndash;&gt;-->
+                <!--<usedDependency>org.jboss.as:jboss-as-controller</usedDependency>-->
+                <!--<usedDependency>org.jboss.as:jboss-as-arquillian-container-managed</usedDependency>-->
+                <!--&lt;!&ndash; NB: Don't add anything without a comment explaining how the-->
+                     <!--dependency is used &ndash;&gt;-->
+              <!--</usedDependencies>-->
+            <!--</configuration>-->
+          <!--</plugin>-->
 
           <plugin>
             <artifactId>maven-failsafe-plugin</artifactId>
@@ -1114,70 +1115,70 @@
         </plugins>
       </build>
 
-      <dependencies>
-        <dependency>
-          <groupId>org.jboss.as</groupId>
-          <artifactId>jboss-as-arquillian-common</artifactId>
-          <!-- this brings in a bunch of out of date arquillian-testenricher-XXX as transitive dependencies -->
-          <version>${jboss.as.version}</version>
-          <scope>test</scope>
-          <exclusions>
-            <exclusion>
-              <groupId>org.jboss.logmanager</groupId>
-              <artifactId>log4j-jboss-logmanager</artifactId>
-            </exclusion>
-          </exclusions>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.arquillian.testenricher</groupId>
-          <artifactId>arquillian-testenricher-cdi</artifactId>
-          <version>${arquillian.version}</version>
-          <scope>test</scope>
-        </dependency>
+      <!--<dependencies>-->
+        <!--<dependency>-->
+          <!--<groupId>org.jboss.as</groupId>-->
+          <!--<artifactId>jboss-as-arquillian-common</artifactId>-->
+          <!--&lt;!&ndash; this brings in a bunch of out of date arquillian-testenricher-XXX as transitive dependencies &ndash;&gt;-->
+          <!--<version>${jboss.as.version}</version>-->
+          <!--<scope>test</scope>-->
+          <!--<exclusions>-->
+            <!--<exclusion>-->
+              <!--<groupId>org.jboss.logmanager</groupId>-->
+              <!--<artifactId>log4j-jboss-logmanager</artifactId>-->
+            <!--</exclusion>-->
+          <!--</exclusions>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+          <!--<groupId>org.jboss.arquillian.testenricher</groupId>-->
+          <!--<artifactId>arquillian-testenricher-cdi</artifactId>-->
+          <!--<version>${arquillian.version}</version>-->
+          <!--<scope>test</scope>-->
+        <!--</dependency>-->
 
-        <dependency>
-          <groupId>org.jboss.as</groupId>
-          <artifactId>jboss-as-arquillian-container-managed</artifactId>
-          <version>${jboss.as.version}</version>
-          <scope>test</scope>
-          <exclusions>
-            <exclusion>
-              <groupId>org.jboss.logmanager</groupId>
-              <artifactId>jboss-logmanager</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.jboss.logmanager</groupId>
-              <artifactId>log4j-jboss-logmanager</artifactId>
-            </exclusion>
-          </exclusions>
-        </dependency>
+        <!--<dependency>-->
+          <!--<groupId>org.jboss.as</groupId>-->
+          <!--<artifactId>jboss-as-arquillian-container-managed</artifactId>-->
+          <!--<version>${jboss.as.version}</version>-->
+          <!--<scope>test</scope>-->
+          <!--<exclusions>-->
+            <!--<exclusion>-->
+              <!--<groupId>org.jboss.logmanager</groupId>-->
+              <!--<artifactId>jboss-logmanager</artifactId>-->
+            <!--</exclusion>-->
+            <!--<exclusion>-->
+              <!--<groupId>org.jboss.logmanager</groupId>-->
+              <!--<artifactId>log4j-jboss-logmanager</artifactId>-->
+            <!--</exclusion>-->
+          <!--</exclusions>-->
+        <!--</dependency>-->
 
-        <dependency>
-          <groupId>org.jboss.osgi.metadata</groupId>
-          <artifactId>jbosgi-metadata</artifactId>
-          <version>2.2.0.Final</version>
-        </dependency>
+        <!--<dependency>-->
+          <!--<groupId>org.jboss.osgi.metadata</groupId>-->
+          <!--<artifactId>jbosgi-metadata</artifactId>-->
+          <!--<version>2.2.0.Final</version>-->
+        <!--</dependency>-->
 
-        <dependency>
-          <groupId>org.jboss.osgi.vfs</groupId>
-          <artifactId>jbosgi-vfs30</artifactId>
-          <version>1.2.1.Final</version>
-        </dependency>
+        <!--<dependency>-->
+          <!--<groupId>org.jboss.osgi.vfs</groupId>-->
+          <!--<artifactId>jbosgi-vfs30</artifactId>-->
+          <!--<version>1.2.1.Final</version>-->
+        <!--</dependency>-->
 
-        <dependency>
-          <groupId>org.jboss.as</groupId>
-          <artifactId>jboss-as-controller-client</artifactId>
-          <version>${jboss.as.version}</version>
-          <scope>test</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.as</groupId>
-          <artifactId>jboss-as-controller</artifactId>
-          <version>${jboss.as.version}</version>
-          <scope>test</scope>
-        </dependency>
+        <!--<dependency>-->
+          <!--<groupId>org.jboss.as</groupId>-->
+          <!--<artifactId>jboss-as-controller-client</artifactId>-->
+          <!--<version>${jboss.as.version}</version>-->
+          <!--<scope>test</scope>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+          <!--<groupId>org.jboss.as</groupId>-->
+          <!--<artifactId>jboss-as-controller</artifactId>-->
+          <!--<version>${jboss.as.version}</version>-->
+          <!--<scope>test</scope>-->
+        <!--</dependency>-->
 
-      </dependencies>
+      <!--</dependencies>-->
     </profile>
 
     <profile>
@@ -1190,17 +1191,17 @@
       </activation>
       <build>
         <plugins>
-          <plugin>
-            <artifactId>maven-dependency-plugin</artifactId>
-            <configuration>
-              <usedDependencies combine.children="append">
-                <!-- used for arquillian tests -->
-                <usedDependency>org.wildfly:wildfly-arquillian-container-managed</usedDependency>
-                <!-- NB: Don't add anything without a comment explaining how the
-                     dependency is used -->
-              </usedDependencies>
-            </configuration>
-          </plugin>
+          <!--<plugin>-->
+            <!--<artifactId>maven-dependency-plugin</artifactId>-->
+            <!--<configuration>-->
+              <!--<usedDependencies combine.children="append">-->
+                <!--&lt;!&ndash; used for arquillian tests &ndash;&gt;-->
+                <!--<usedDependency>org.wildfly.arquillian:wildfly-arquillian-container-managed</usedDependency>-->
+                <!--&lt;!&ndash; NB: Don't add anything without a comment explaining how the-->
+                     <!--dependency is used &ndash;&gt;-->
+              <!--</usedDependencies>-->
+            <!--</configuration>-->
+          <!--</plugin>-->
 
           <plugin>
             <artifactId>maven-antrun-plugin</artifactId>
@@ -1232,21 +1233,6 @@
           </plugin>
         </plugins>
       </build>
-      <dependencies>
-        <dependency>
-          <!-- This might be org.wildfly.arquillian in future: -->
-          <groupId>org.wildfly</groupId>
-          <artifactId>wildfly-arquillian-container-managed</artifactId>
-          <version>${wildfly.client.version}</version>
-          <scope>test</scope>
-          <exclusions>
-            <exclusion>
-              <groupId>org.jboss.remoting3</groupId>
-              <artifactId>jboss-remoting</artifactId>
-            </exclusion>
-          </exclusions>
-        </dependency>
-      </dependencies>
     </profile>
 
     <profile>
@@ -1481,6 +1467,19 @@
     </dependency>
 
     <dependency>
+      <groupId>org.wildfly.arquillian</groupId>
+      <artifactId>wildfly-arquillian-container-managed</artifactId>
+      <version>${wildfly.arquillian.version}</version>
+      <scope>test</scope>
+      <!--<exclusions>-->
+      <!--<exclusion>-->
+      <!--<groupId>org.jboss.remoting3</groupId>-->
+      <!--<artifactId>jboss-remoting</artifactId>-->
+      <!--</exclusion>-->
+      <!--</exclusions>-->
+    </dependency>
+
+    <dependency>
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
       <version>20140107</version>
@@ -1536,20 +1535,19 @@
 
     <dependency>
       <groupId>org.jboss.spec.javax.faces</groupId>
-      <artifactId>jboss-jsf-api_2.1_spec</artifactId>
+      <artifactId>jboss-jsf-api_2.2_spec</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.jboss.spec.javax.transaction</groupId>
-      <artifactId>jboss-transaction-api_1.1_spec</artifactId>
+      <artifactId>jboss-transaction-api_1.2_spec</artifactId>
       <scope>provided</scope>
     </dependency>
-    <dependency>
-      <groupId>org.jboss</groupId>
-      <artifactId>jboss-dmr</artifactId>
-      <version>1.2.1.Final</version>
-      <scope>test</scope>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.jboss</groupId>-->
+      <!--<artifactId>jboss-dmr</artifactId>-->
+      <!--<scope>test</scope>-->
+    <!--</dependency>-->
 
     <!-- used for Seam Text converter -->
     <dependency>
@@ -1646,14 +1644,14 @@
     <dependency>
       <groupId>io.undertow</groupId>
       <artifactId>undertow-core</artifactId>
-      <version>1.0.15.Final</version>
+      <version>1.3.15.Final</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>io.undertow</groupId>
       <artifactId>undertow-servlet</artifactId>
-      <version>1.0.15.Final</version>
+      <version>1.3.15.Final</version>
       <scope>provided</scope>
       <exclusions>
         <exclusion>
@@ -1859,6 +1857,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.apache.lucene</groupId>
+      <artifactId>lucene-queryparser</artifactId>
+      <version>${lucene.version}</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-artifact</artifactId>
       <version>3.2.1</version>
@@ -1875,16 +1879,6 @@
     <dependency>
       <groupId>org.apache.solr</groupId>
       <artifactId>solr-core</artifactId>
-      <exclusions>
-        <exclusion>
-          <groupId>org.apache.commons</groupId>
-          <artifactId>commons-io</artifactId>
-        </exclusion>
-        <exclusion>
-          <artifactId>servlet-api</artifactId>
-          <groupId>javax.servlet</groupId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.solr</groupId>
@@ -1911,14 +1905,10 @@
       <artifactId>hibernate-commons-annotations</artifactId>
       <scope>provided</scope>
     </dependency>
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-search-analyzers</artifactId>
-    </dependency>
 
     <dependency>
       <groupId>org.hibernate.javax.persistence</groupId>
-      <artifactId>hibernate-jpa-2.0-api</artifactId>
+      <artifactId>hibernate-jpa-2.1-api</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -1926,8 +1916,8 @@
       <artifactId>hibernate-search-engine</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-search-infinispan</artifactId>
+      <groupId>org.infinispan</groupId>
+      <artifactId>infinispan-directory-provider</artifactId>
     </dependency>
 
     <dependency>
@@ -1935,6 +1925,16 @@
       <artifactId>infinispan-core</artifactId>
       <version>${infinispan.version}</version>
       <scope>provided</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.jboss.marshalling</groupId>
+          <artifactId>jboss-marshalling-osgi</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.jboss.spec.javax.transaction</groupId>
+          <artifactId>jboss-transaction-api_1.1_spec</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <!-- These two are being explicitly added as jboss-as-parent
@@ -1942,23 +1942,21 @@
     <dependency>
       <groupId>org.jboss.marshalling</groupId>
       <artifactId>jboss-marshalling</artifactId>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.jboss.marshalling</groupId>
       <artifactId>jboss-marshalling-river</artifactId>
-      <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>org.jboss.spec.javax.el</groupId>
-      <artifactId>jboss-el-api_2.2_spec</artifactId>
+      <artifactId>jboss-el-api_3.0_spec</artifactId>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>org.jboss.spec.javax.servlet</groupId>
-      <artifactId>jboss-servlet-api_3.0_spec</artifactId>
+      <artifactId>jboss-servlet-api_3.1_spec</artifactId>
       <scope>provided</scope>
     </dependency>
 
@@ -2025,23 +2023,18 @@
     </dependency>
 
     <dependency>
-      <groupId>org.jboss.web</groupId>
-      <artifactId>jbossweb</artifactId>
-    </dependency>
-
-    <dependency>
       <groupId>org.jboss.security</groupId>
       <artifactId>jboss-negotiation-common</artifactId>
     </dependency>
 
     <dependency>
       <groupId>org.jboss.spec.javax.jms</groupId>
-      <artifactId>jboss-jms-api_1.1_spec</artifactId>
+      <artifactId>jboss-jms-api_2.0_spec</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.jboss.spec.javax.ejb</groupId>
-      <artifactId>jboss-ejb-api_3.1_spec</artifactId>
+      <artifactId>jboss-ejb-api_3.2_spec</artifactId>
       <scope>provided</scope>
     </dependency>
 
@@ -2049,7 +2042,7 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
-      <version>1.3.176</version>
+      <version>1.4.192</version>
       <scope>provided</scope>
     </dependency>
 
@@ -2151,7 +2144,7 @@
     <dependency>
       <groupId>org.jboss.logging</groupId>
       <artifactId>jboss-logging</artifactId>
-      <version>3.1.4.GA</version>
+      <version>3.3.0.Final</version>
       <scope>provided</scope>
     </dependency>
 
@@ -2223,7 +2216,7 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-exec</artifactId>
-      <version>1.1</version>
+      <version>1.3</version>
     </dependency>
 
     <!-- See https://issues.jboss.org/browse/WFK2-674
@@ -2341,7 +2334,7 @@
     <dependency>
       <groupId>org.picketbox</groupId>
       <artifactId>picketbox</artifactId>
-      <version>4.0.15.Final</version>
+      <version>4.9.4.Final</version>
       <scope>provided</scope>
     </dependency>
 
